# mcp-rl-agent

./: .gitignore  CLAUDE.md  LEARNING_FLOW.md  MCP_FASTMCP_SUCCESS.md  MCP_GYM_SETUP.md  README.md  README_ATARI.md  main.py  pyproject.toml
config/: atari_breakout_config.yaml  atari_pacman_config.yaml  atari_pong_config.yaml  mcp_gym_atari_config.yaml  mcp_gym_interactive_config.yaml  multi_game_config.yaml
configs/: claude.yaml  default.yaml  huggingface.yaml
docs/: enhanced_ppo_architecture.md
examples/: atari_training_example.py  demo_learning_flow.py  mcp_gym_example.py  quick_test.py  simple_demo.py
scripts/: test_mcp_gym_connection.py
src/mcp_rl_agent/: __init__.py  interfaces.py  main.py
src/mcp_rl_agent/config/: __init__.py  manager.py  models.py
src/mcp_rl_agent/interface/: __init__.py  message_parser.py  operator.py
src/mcp_rl_agent/llm/: __init__.py  base.py  claude.py  huggingface.py
src/mcp_rl_agent/mcp/: __init__.py  action_manager.py  client.py  http_client.py  mock_client.py  mock_server.py
src/mcp_rl_agent/rl/: __init__.py  enhanced_ppo.py  ppo_agent.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_system_integration.py
tests/unit/: test_config.py  test_llm_providers.py  test_mcp_client.py  test_message_parser.py  test_ppo_agent.py
